[package]
name = "unicode_converter"
version = "0.1.1"
edition = "2021"
authors = ["Maxime Bouillot maxbouillot@gmail.com"]
license = "BSD-3-Clause"
description = "A library and a CLI tool to convert data between various Unicode encodings."

[lib]
name = "unicode_converter"
path = "src/unicode_converter_lib.rs"

[[bin]]
name = "unicode_converter"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }

